WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192821
<
rdar://problem/46194315
> macOS: WebKit1 does not handle occlusion changes
https://bugs.webkit.org/show_bug.cgi?id=192821
Summary
<rdar://problem/46194315> macOS: WebKit1 does not handle occlusion changes
Benjamin Poulain
Reported
2018-12-18 11:58:50 PST
<
rdar://problem/46194315
> macOS: WebKit1 does not handle occlusion changes
Attachments
Patch
(7.15 KB, patch)
2018-12-18 12:02 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.97 MB, application/zip)
2018-12-18 12:45 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(2.04 MB, application/zip)
2018-12-18 13:19 PST
,
EWS Watchlist
no flags
Details
Patch
(7.18 KB, patch)
2018-12-18 14:27 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-sierra
(2.54 MB, application/zip)
2018-12-18 15:02 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(1.22 MB, application/zip)
2018-12-18 15:57 PST
,
EWS Watchlist
no flags
Details
Patch
(10.29 KB, patch)
2018-12-18 16:44 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.39 MB, application/zip)
2018-12-18 18:38 PST
,
EWS Watchlist
no flags
Details
Patch
(10.32 KB, patch)
2018-12-18 20:43 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(10.89 KB, patch)
2018-12-19 16:06 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(12.08 KB, patch)
2018-12-20 16:22 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2018-12-18 12:02:31 PST
Created
attachment 357595
[details]
Patch
Benjamin Poulain
Comment 2
2018-12-18 12:02:33 PST
<
rdar://problem/46194315
>
EWS Watchlist
Comment 3
2018-12-18 12:45:11 PST
Comment on
attachment 357595
[details]
Patch
Attachment 357595
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/10462029
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 4
2018-12-18 12:45:13 PST
Created
attachment 357598
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-12-18 13:18:59 PST
Comment on
attachment 357595
[details]
Patch
Attachment 357595
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/10462188
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 6
2018-12-18 13:19:00 PST
Created
attachment 357601
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
Benjamin Poulain
Comment 7
2018-12-18 14:27:48 PST
Created
attachment 357613
[details]
Patch
EWS Watchlist
Comment 8
2018-12-18 15:02:48 PST
Comment on
attachment 357613
[details]
Patch
Attachment 357613
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/10463796
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 9
2018-12-18 15:02:49 PST
Created
attachment 357619
[details]
Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 10
2018-12-18 15:57:07 PST
Comment on
attachment 357613
[details]
Patch
Attachment 357613
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/10464283
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 11
2018-12-18 15:57:09 PST
Created
attachment 357626
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
Benjamin Poulain
Comment 12
2018-12-18 16:44:33 PST
Created
attachment 357633
[details]
Patch
EWS Watchlist
Comment 13
2018-12-18 18:38:57 PST
Comment on
attachment 357633
[details]
Patch
Attachment 357633
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10466514
New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/register-closed-window.https.html
EWS Watchlist
Comment 14
2018-12-18 18:38:59 PST
Created
attachment 357645
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Benjamin Poulain
Comment 15
2018-12-18 20:43:49 PST
Created
attachment 357649
[details]
Patch
Benjamin Poulain
Comment 16
2018-12-18 20:45:20 PST
The iOS failure looks like noise. The code is #ifdefed on iOS. I reuploaded to give EWS another chance. The results looks like DRT is dumping the layout instead of the text version. Chris, if you can't review this, who reviews WebKit1 patches nowadays? :)
Chris Dumez
Comment 17
2018-12-19 14:39:34 PST
Comment on
attachment 357649
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357649&action=review
r=me with question.
> Source/WebKitLegacy/mac/WebView/WebViewData.h:214 > + BOOL windowOcclusionDetectionEnabled;
So we want this off by default? Why?
Benjamin Poulain
Comment 18
2018-12-19 14:59:24 PST
(In reply to Chris Dumez from
comment #17
)
> View in context: >
https://bugs.webkit.org/attachment.cgi?id=357649&action=review
> > r=me with question. > > > Source/WebKitLegacy/mac/WebView/WebViewData.h:214 > > + BOOL windowOcclusionDetectionEnabled; > > So we want this off by default? Why?
Because I am dumb. I bet I broke the patch when I added DRT support.
Benjamin Poulain
Comment 19
2018-12-19 16:06:30 PST
Created
attachment 357746
[details]
Patch
Benjamin Poulain
Comment 20
2018-12-19 16:07:31 PST
> > Source/WebKitLegacy/mac/WebView/WebViewData.h:214 > > + BOOL windowOcclusionDetectionEnabled; > > So we want this off by default? Why?
Thanks so much for the good review Chris. You saved my ass. I verified this patch by hand after the DRT changes.
Benjamin Poulain
Comment 21
2018-12-19 17:29:19 PST
Thanks for the review.
WebKit Commit Bot
Comment 22
2018-12-19 17:41:43 PST
Comment on
attachment 357746
[details]
Patch Clearing flags on attachment: 357746 Committed
r239417
: <
https://trac.webkit.org/changeset/239417
>
WebKit Commit Bot
Comment 23
2018-12-19 17:41:45 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 24
2018-12-20 08:48:59 PST
I think this might have caused 2 API tests to time out: Timeout TestWebKitAPI.FullscreenZoomInitialFrame.WebKit TestWebKitAPI.PageVisibilityStateWithWindowChanges.WebKit
Benjamin Poulain
Comment 25
2018-12-20 09:00:02 PST
(In reply to Chris Dumez from
comment #24
)
> I think this might have caused 2 API tests to time out: > Timeout > > TestWebKitAPI.FullscreenZoomInitialFrame.WebKit > TestWebKitAPI.PageVisibilityStateWithWindowChanges.WebKit
Are those not tested by the bots? I'll have a look today
Chris Dumez
Comment 26
2018-12-20 09:00:39 PST
(In reply to Benjamin Poulain from
comment #25
)
> (In reply to Chris Dumez from
comment #24
) > > I think this might have caused 2 API tests to time out: > > Timeout > > > > TestWebKitAPI.FullscreenZoomInitialFrame.WebKit > > TestWebKitAPI.PageVisibilityStateWithWindowChanges.WebKit > > Are those not tested by the bots? > > I'll have a look today
No, still no API test ews...
Ryan Haddad
Comment 27
2018-12-20 10:24:19 PST
I'm going to roll this out so that we can get the bots back to green in the meantime.
Ryan Haddad
Comment 28
2018-12-20 10:32:45 PST
Reverted
r239417
for reason: Introduced two API test failures on macOS. Committed
r239453
: <
https://trac.webkit.org/changeset/239453
>
Benjamin Poulain
Comment 29
2018-12-20 16:22:25 PST
Created
attachment 357898
[details]
Patch
Benjamin Poulain
Comment 30
2018-12-20 16:23:59 PST
Looks like running tests with occlusion is a big fragile. The tests appear under other windows and the timing of visibility change become unpredictable. I disabled occlusion support. I see WebKit2 also needed that in a couple of places :(
Chris Dumez
Comment 31
2018-12-20 16:25:06 PST
Comment on
attachment 357898
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357898&action=review
> Tools/TestWebKitAPI/mac/WebKitAgnosticTest.mm:90 > + // The tests can be run concurrently. In that case, window can occlude each other and change visibility results.
I thought we did not run API tests concurrently. The Window would likely not be visible on screen though.
Benjamin Poulain
Comment 32
2018-12-20 17:07:09 PST
(In reply to Chris Dumez from
comment #31
)
> Comment on
attachment 357898
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=357898&action=review
> > > Tools/TestWebKitAPI/mac/WebKitAgnosticTest.mm:90 > > + // The tests can be run concurrently. In that case, window can occlude each other and change visibility results. > > I thought we did not run API tests concurrently. The Window would likely not > be visible on screen though.
I assumed we could from: --child-processes=CHILD_PROCESSES Number of processes to run in parallel.
WebKit Commit Bot
Comment 33
2018-12-21 00:38:04 PST
Comment on
attachment 357898
[details]
Patch Clearing flags on attachment: 357898 Committed
r239496
: <
https://trac.webkit.org/changeset/239496
>
WebKit Commit Bot
Comment 34
2018-12-21 00:38:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug